syntax = "proto3";

package spec;

message CustomJsonName {
  string name = 1 [json_name = "not_name"];
}
